[gd_scene load_steps=15 format=3 uid="uid://gc6m30k1tvd8"]

[ext_resource type="Texture2D" uid="uid://dsw8sayotkdj5" path="res://assets/ui/appliance_confirm_button.png" id="1_gdm3u"]
[ext_resource type="Texture2D" uid="uid://ccmucbiwfpg4x" path="res://assets/ui/appliance_confirm_button_pressed.png" id="2_x2r75"]
[ext_resource type="Texture2D" uid="uid://bdj65l8gljrmr" path="res://assets/ui/appliance_confirm_button_hover.png" id="3_jf0we"]
[ext_resource type="Texture2D" uid="uid://cymp7du0tjg0d" path="res://assets/ui/appliance_finish_button.png" id="4_afdho"]
[ext_resource type="Texture2D" uid="uid://coupyis8ltlxy" path="res://assets/ui/appliance_finish_button_pressed.png" id="5_34ub1"]
[ext_resource type="Texture2D" uid="uid://cwcbsewn3jiwv" path="res://assets/ui/appliance_finish_button_hover.png" id="6_ymrwg"]
[ext_resource type="Texture2D" uid="uid://dutv21s0xpmpi" path="res://assets/ui/appliance_cancel_button.png" id="7_nc6cg"]
[ext_resource type="Texture2D" uid="uid://di68g5jdjb7qt" path="res://assets/ui/appliance_cancel_button_pressed.png" id="8_0fyuk"]
[ext_resource type="Theme" uid="uid://bas6smt1iwb1f" path="res://themes/ui_theme.tres" id="8_mlpau"]
[ext_resource type="Texture2D" uid="uid://brlgn0s8i0fp2" path="res://assets/ui/appliance_cancel_button_hover.png" id="9_u1hoh"]
[ext_resource type="PackedScene" uid="uid://c2ct3c5b0l41d" path="res://scenes/sounds.tscn" id="11_57rex"]
[ext_resource type="AudioStream" uid="uid://biithianepc2p" path="res://assets/audio/button_click.wav" id="12_0hyaw"]
[ext_resource type="Script" path="res://scripts/sounds/cooking_timer_bar_sounds.gd" id="12_vrcwg"]

[sub_resource type="LabelSettings" id="LabelSettings_bydme"]
font_size = 40
font_color = Color(0.0121183, 0.0121183, 0.0121183, 1)

[node name="CookingTimerBar" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -1.0
offset_top = 5.0
offset_right = 516.0
offset_bottom = 354.0

[node name="StartButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 375.0
offset_top = 121.0
offset_right = 519.0
offset_bottom = 199.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("1_gdm3u")
texture_pressed = ExtResource("2_x2r75")
texture_hover = ExtResource("3_jf0we")

[node name="DoneButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 376.0
offset_top = 121.0
offset_right = 520.0
offset_bottom = 199.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("4_afdho")
texture_pressed = ExtResource("5_34ub1")
texture_hover = ExtResource("6_ymrwg")

[node name="RemoveButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 376.0
offset_top = 238.0
offset_right = 876.0
offset_bottom = 738.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("7_nc6cg")
texture_pressed = ExtResource("8_0fyuk")
texture_hover = ExtResource("9_u1hoh")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(100, 30)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.263
anchor_top = 0.175
anchor_right = 0.652
anchor_bottom = 0.281
offset_left = -71.971
offset_top = 274.925
offset_right = -72.084
offset_bottom = 274.931
rotation = -1.56528

[node name="TimerBar" type="ProgressBar" parent="ColorRect"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.111
offset_bottom = -4.107
theme = ExtResource("8_mlpau")
theme_type_variation = &"TimerBar"
step = 1.0
show_percentage = false

[node name="PerfectMinLine" type="Line2D" parent="ColorRect"]
position = Vector2(-92, -81)
points = PackedVector2Array(236, 118, 236, 102.625, 236, 81)
width = 3.0
default_color = Color(0, 0, 0, 1)

[node name="PerfectMaxLine" type="Line2D" parent="ColorRect"]
position = Vector2(-73, -81)
points = PackedVector2Array(236, 118, 236, 81)
width = 3.0
default_color = Color(0, 0, 0, 1)

[node name="SatisfactoryMinLine" type="Line2D" parent="ColorRect"]
position = Vector2(-130, -81)
points = PackedVector2Array(236, 118, 236, 102.625, 236, 81)
width = 3.0
default_color = Color(0, 0, 0, 1)

[node name="Status" type="Label" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 13.0
offset_right = 575.0
offset_bottom = 103.0
scale = Vector2(0.75, 0.75)
theme_override_font_sizes/font_size = 10
label_settings = SubResource("LabelSettings_bydme")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="moreSounds" parent="." instance=ExtResource("11_57rex")]
script = ExtResource("12_vrcwg")

[node name="ButtonClick" type="AudioStreamPlayer" parent="moreSounds"]
stream = ExtResource("12_0hyaw")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="StartButton" to="moreSounds" method="_on_start_button_pressed"]
[connection signal="pressed" from="DoneButton" to="moreSounds" method="_on_done_button_pressed"]
[connection signal="pressed" from="RemoveButton" to="moreSounds" method="_on_remove_button_pressed"]
